# HotelGen

./: .gitignore  CSHARP.md  Directory.Build.props  README.md  Xl9045qi.HotelGen.slnx  pyproject.toml  run.sh  sample.job.yaml
.python/: README.md  pyproject.toml
.python/src/xl9045qi/hotelgen/: __main__.py
.python/src/xl9045qi/hotelgen/data/: __init__.py  zipcodes.json
.python/src/xl9045qi/hotelgen/generators/: customer.py  distribution.py  transaction.py
.python/src/xl9045qi/hotelgen/loaders/: mssql.py
.python/src/xl9045qi/hotelgen/simulation/: day.py  phase0.py  phase3.py
Xl9045qi.HotelGen/: Main.cs  Xl9045qi.HotelGen.csproj
Xl9045qi.HotelGen/Models/: Customer.cs  Property.cs  Transaction.cs  TransactionCharge.cs  TransactionLine.cs  _Helpers.cs
docs/: JOB_FILES.md
notebook/: hotel-review-train.ipynb  train.py
src/xl9045qi/hotelgen/: __init__.py  __main__.py  generator.py  models.py  simulation.py
src/xl9045qi/hotelgen/data/: __init__.py  adj.txt  noun.txt  parameters.yaml
src/xl9045qi/hotelgen/generators/: __init__.py  customer.py  distribution.py  giftshop.py  hotel.py  transaction.py
src/xl9045qi/hotelgen/loaders/: __init__.py  mongo.py  mssql.py
src/xl9045qi/hotelgen/simulation/: __init__.py  day.py  phase0.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py
src/xl9045qi/hotelgen/tools/: pkl_migrate.py
